# raytracer

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
images/: README.md
scenes/: align-check-plane.yaml  area-light.yaml  bounding-box.yaml  chapter10.yaml  chapter11-water.yaml  chapter11.yaml  chapter12.yaml  chapter13.yaml  chapter14.yaml  chapter15.yaml  chapter16.yaml  chapter6.yaml  chapter8.yaml  chapter9.yaml  checkered-cylinder.yaml  checkered-plane.yaml  checkered-sphere.yaml
src/: arguments.rs  bounding_box.rs  camera.rs  canvas.rs  colour.rs  intersect.rs  intersection.rs  lib.rs  main.rs  material.rs  obj_parser.rs  object.rs  output.rs  pattern.rs  point_light.rs  sphere.rs  util.rs  world.rs
src/bounding_box/: bounded.rs  mod.rs
src/intersection/: computations.rs  intersectable.rs  list.rs  list_builder.rs  mod.rs  t_list.rs  t_values.rs
src/light/: area.rs  lightable.rs  mod.rs  point.rs
src/math/: angle.rs  approx.rs  float.rs  matrix.rs  mod.rs  perlin_noise.rs  point.rs  ray.rs  transform.rs  transformation.rs  util.rs  vector.rs
src/object/: includes.rs  mod.rs  obj_parser.rs  plane.rs  shape.rs  sphere.rs  test.rs  updatable.rs
src/old_scene/: area_light.rs  bounding_box.rs  chapter10.rs  chapter11.rs  chapter12.rs  chapter13.rs  chapter14.rs  chapter15.rs  chapter16.rs  chapter6.rs  chapter8.rs  chapter9.rs
src/pattern/: blend.rs  checker.rs  gradient.rs  kind.rs  mod.rs  pattern_at.rs  perlin_pattern.rs  perturbed.rs  radial_gradient.rs  ring.rs  solid.rs  stripe.rs  test.rs  uniform.rs  util.rs
src/scene/: add.rs  area_light.rs  bounding_box.rs  chapter10.rs  chapter11.rs  chapter12.rs  chapter13.rs  chapter14.rs  chapter15.rs  chapter16.rs  chapter6.rs  chapter8.rs  chapter9.rs  define.rs  list.rs  material.rs  mod.rs  shapes.rs  transformations.rs
src/shape/: bounded.rs  cone.rs  cube.rs  cylinder.rs  group.rs  intersectable.rs  mod.rs  plane.rs  sphere.rs  test.rs  triangle.rs
(+43 files in other folders)
