[package]
name = "raytracer"
version = "0.1.0"
authors = ["Megan Pycroft <megan.pycroft@gmail.com>"]
edition = "2021"
description = "A ray tracer written in Rust"
repository = "https://github.com/mpycroft/raytracer"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
console = "0.15.7"
derive-new = "0.6.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
exmex = "0.19.0"
float-cmp = "0.9.0"
indicatif = "0.17.7"
libnoise = "1.0.0"
paste = "1.0.14"
rand = "0.8.5"

[lints.clippy]
pedantic = "warn"
